src/scss/_assets/_xtra/_elements/_mutated/_menu.scss
@mixin menu() {
    :is([type=toolbar], [type=context]) {        
        display: var(--display);
        gap: var(--gap);
        margin: var(--margin);
        padding: var(--padding);
        border-radius:
            var(--border-start-start-radius, var(--border-radius))
            var(--border-start-end-radius, var(--border-radius))
            var(--border-end-end-radius, var(--border-radius))
            var(--border-end-start-radius, var(--border-radius));
        background-color: var(--background-color);
        background-image: var(--background-image);
        outline-color: var(--outline-color);
        outline-style: var(--outline-style);
        outline-width: var(--outline-width);
        outline-offset: var(--outline-offset);
        box-shadow: var(--box-shadow);
        list-style: var(--list-style);
        > li {
            display: var(--display);
        }
    }
}

